--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name" translatable="false">AppRTC</string>
+    <string name="app_name" translatable="false">Spreedbox Webrtc</string>
     <string name="settings_name" translatable="false">AppRTC Settings</string>
     <string name="disconnect_call">Disconnect Call</string>
     <string name="room_description">
@@ -222,4 +222,9 @@
     <string name="disconnect">Disconnect</string>
     <string name="rooms">Rooms</string>
     <string name="default_room">Default Room</string>
+    <string name="login">Login</string>
+    <string name="login_desc">Please enter your username and password for the Spreedbox</string>
+    <string name="answer">Answer</string>
+    <string name="reject_call">Reject Call</string>
+    <string name="stop_calling">Stop Calling</string>
 </resources>
