--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -213,6 +213,11 @@
     <string name="pref_tracing_dlg">Debug performance tracing.</string>
     <string name="pref_tracing_default" translatable="false">false</string>
 
+    <string name="pref_force_relay_key">force_relay_preference</string>
+    <string name="pref_force_relay_title">Force TURN use</string>
+    <string name="pref_force_relay_dlg">Force TURN use</string>
+    <string name="pref_force_relay_default" translatable="false">false</string>
+
     <!-- Spreedbox -->
     <string name="enter_server_name">Please enter the domain name or IP address of the Spreedbox</string>
     <string name="connected">Connected</string>
@@ -221,6 +226,7 @@
     <string name="connect">Connect</string>
     <string name="disconnect">Disconnect</string>
     <string name="rooms">Rooms</string>
+    <string name="rooms_button">&lt; Rooms</string>
     <string name="default_room">Default Room</string>
     <string name="login">Login</string>
     <string name="login_desc">Please enter your username and password for the Spreedbox</string>
@@ -247,4 +253,5 @@
     <string name="download">Download</string>
     <string name="cancel">Cancel</string>
     <string name="open">Open</string>
+    <string name="retry">Retry</string>
 </resources>
