fixed file transfer

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -265,4 +265,5 @@
     <string name="room_chat_button">Room Chat</string>
     <string name="all">All</string>
     <string name="no_activity">There is no application available to open the file.</string>
+    <string name="unshare">Unshare</string>
 </resources>
