--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,18 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name" translatable="false">Spreedbox Webrtc</string>
-    <string name="settings_name" translatable="false">AppRTC Settings</string>
+    <string name="settings_name" translatable="false">SecureMeet Settings</string>
     <string name="manage_accounts_class" translatable="false">com.owncloud.android.ui.activity.ManageAccountsActivity</string>
-    <string name="disconnect_call">Disconnect Call</string>
-    <string name="room_description">
-        Please enter a room name. Room names are shared with everyone, so think
-        of something unique and send it to a friend.
-    </string>
-    <string name="favorites">Favorites</string>
-    <string name="no_favorites">No favorites</string>
-    <string name="invalid_url_title">Invalid URL</string>
-    <string name="invalid_url_text">The URL or room name you entered resulted in an invalid URL: %1$s
-    </string>
+
+    <string name="no_rooms">No rooms</string>
     <string name="channel_error_title">Connection error</string>
     <string name="connecting_to">Connecting to: %1$s</string>
     <string name="missing_url">FATAL ERROR: Missing URL to connect to.</string>
@@ -26,7 +18,7 @@
     <string name="action_settings">Settings</string>
     <string name="action_loopback">Loopback connection</string>
     <string name="connect_description">Connect to the room</string>
-    <string name="add_favorite_description">Add favorite</string>
+    <string name="add_favorite_description">Add room</string>
     <string name="format_description">%1$dx%2$d @ %3$d fps</string>
 
     <!-- Settings strings. -->
@@ -34,7 +26,7 @@
     <string name="pref_room_list_key">room_list_preference</string>
 
     <string name="pref_videosettings_key">video_settings_key</string>
-    <string name="pref_videosettings_title">WebRTC video settings.</string>
+    <string name="pref_videosettings_title">SecureMeet video settings.</string>
 
     <string name="pref_videocall_key">videocall_preference</string>
     <string name="pref_videocall_title">Video call.</string>
@@ -50,10 +42,15 @@
     <string name="pref_camera2_default">true</string>
     <string name="pref_camera2_not_supported">Not supported on this device.</string>
 
+    <string name="pref_status_key">status_preference</string>
+    <string name="pref_status_title">Status message</string>
+    <string name="pref_status_dlg">What\'s on your mind?</string>
+    <string name="pref_status_default"></string>
+
     <string name="pref_resolution_key">resolution_preference</string>
     <string name="pref_resolution_title">Video resolution.</string>
     <string name="pref_resolution_dlg">Enter AppRTC local video resolution.</string>
-    <string name="pref_resolution_default">Default</string>
+    <string name="pref_resolution_default">320 x 240</string>
 
     <string name="pref_fps_key">fps_preference</string>
     <string name="pref_fps_title">Camera fps.</string>
@@ -227,7 +224,7 @@
     <string name="connect">Connect</string>
     <string name="disconnect">Disconnect</string>
     <string name="rooms">Rooms</string>
-    <string name="rooms_button">&lt; Rooms</string>
+    <string name="rooms_button">Rooms</string>
     <string name="default_room">Default Room</string>
     <string name="login">Login</string>
     <string name="login_desc">Please enter your username and password for the Spreedbox</string>
@@ -235,7 +232,7 @@
     <string name="reject_call">Reject Call</string>
     <string name="stop_calling">Stop Calling</string>
     <string name="recent">Recent</string>
-    <string name="recent_button">&lt; Recent</string>
+    <string name="recent_button">Recent</string>
     <string name="files">Files</string>
 
     <string name="chooser_class"></string>
@@ -246,6 +243,7 @@
     <string name="drawer_chat">SecureIM</string>
     <string name="drawer_video_chat">SecureMeet</string>
     <string name="drawer_share_files">SecureFileShare</string>
+    <string name="prefs_add_account">Add account</string>
     <string name="drawer_item_settings">Settings</string>
     <string name="drawer_close">Close</string>
     <string name="drawer_open">Open</string>
@@ -266,4 +264,7 @@
     <string name="all">All</string>
     <string name="no_activity">There is no application available to open the file.</string>
     <string name="unshare">Unshare</string>
+    <string name="action_status">Status</string>
+    <string name="incoming_call_from">Incoming call from</string>
+    <string name="calling">Calling</string>
 </resources>
