fixed issue with video layout when a user hangs up

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -271,5 +271,6 @@
     <string name="action_status">Status</string>
     <string name="incoming_call_from">Incoming call from</string>
     <string name="calling">Calling</string>
-
+    <string name="enter_pin">Enter the PIN for room %1$s</string>
+    <string name="pin">Enter PIN</string>
 </resources>
