--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
     <string name="app_name" translatable="false">Spreedbox Webrtc</string>
 
-    <string name="settings_name" translatable="false">SecureMeet Settings</string>
+    <string name="settings_name" translatable="false">Settings</string>
     <string name="manage_accounts_class" translatable="false">com.owncloud.android.ui.activity.ManageAccountsActivity</string>
 
     <string name="no_rooms">No rooms</string>
@@ -274,4 +274,7 @@
     <string name="enter_pin">Enter the PIN for room %1$s</string>
     <string name="pin">Enter PIN</string>
     <string name="missed_call">Missed call from %s</string>
+    <string name="about_title">About</string>
+    <string name="about_android">%1$s Android app</string>
+    <string name="about_version">version %1$s</string>
 </resources>
