--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -282,4 +282,5 @@
     <string name="invalid_credentials">Invalid PIN</string>
     <string name="screenshare_offer">%s offered to share their screen</string>
     <string name="accept">Accept</string>
+    <string name="unknown">Unknown</string>
 </resources>
