--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -283,4 +283,5 @@
     <string name="screenshare_offer">%s offered to share their screen</string>
     <string name="accept">Accept</string>
     <string name="unknown">Unknown</string>
+    <string name="in_call_with">In call with %1$s</string>
 </resources>
